cli/tests/snapshot/inputs/errors/blame_custom_message_ansi_escaping.ncl
# capture = 'stderr'
# command = ['eval']
null | std.FailWith "\x1B[9;33;47mstrike through with background \"and\" \"quotes\""
